infra/vpc.tf
resource "aws_vpc" "this" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "mlops-main-vpc"
  }
}
